set(SERVER_HEADERS attrdesc.h
    attribute.h
    attribute.tpp
    attrsetval.tpp
    attribute_spec.tpp
    attrmanip.h
    attrprop.h
    attrprop.tpp
    auto_tango_monitor.h
    basiccommand.h
    blackbox.h
    classattribute.h
    classpipe.h
    command.h
    pipe.h
    pipe.tpp
    coutappender.h
    device.h
    device_2.h
    device_3.h
    device_3.tpp
    device_4.h
    device_5.h
    deviceclass.h
    devintr.h
    dintrthread.h
    dserver.h
    dserverclass.h
    dserversignal.h
    eventsupplier.h
    except.h
    fwdattrdesc.h
    fwdattribute.h
    fwdattribute.tpp
    fwdattribute_spec.tpp
    log4tango.h
    logcmds.h
    logging.h
    logstream.h
    multiattribute.h
    pipedesc.h
    pollcmds.h
    pollext.h
    pollext.tpp
    pollobj.h
    pollring.h
    pollring.tpp
    pollthread.h
    pollthread.tpp
    readers_writers_lock.h
    rootattreg.h
    seqvec.h
    tango_config.h
    tango_monitor.h
    tangoappender.h
    tangorollingfileappender.h
    utils.h
    utils.tpp
    utils_spec.tpp
    w_attribute.h
    w_attribute.tpp
    w_attrsetval.tpp
    w_attribute_spec.tpp
    w_pipe.h
    w_pipe.tpp
    subdev_diag.h
    encoded_attribute.h
    encoded_format.h
    event_subscription_state.h
    tango_optional.h
    tango_clock.h
    tango_current_function.h
    exception_reason_consts.h)

install(FILES ${SERVER_HEADERS} DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}/tango/server")
